# BeagleLogic

firmware/: CMakeLists.txt
firmware/cmake/: ti-pru-setup.cmake  ti-pru-toolchain.cmake
kernel/: beaglelogic.c
